# kerasty

./: .gitignore  Cargo.toml  LICENSE  README.md  dev.sh
.cargo/: config.toml
src/: lib.rs  optimizer.rs  sequential.rs
src/common/: definitions.rs  mod.rs  traits.rs
src/layer/: attention.rs  conv.rs  dense.rs  dropout.rs  embedding.rs  flatten.rs  mod.rs  normalization.rs  pooling.rs  recurrent.rs
tests/: integration_test.rs  unit_test.rs
