[package]
name = "kerasty"
version = "0.2.0"
description = "Keras for Rust with support for Web Assembly."
categories = ["science", "wasm", "web-programming"]
keywords = ["keras", "webassembly", "candle", "ai", "machinelearning"]
homepage = "https://docs.rs/kerasty/latest/kerasty/"
repository = "https://github.com/HomeroRR/kerasty"
authors = ["Homero Roman", "Frederick Roman"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.84.0"

[dependencies]
candle-core = "0.8.4"
candle-nn = "=0.8.3"
